[package]
name = "oxide_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["full"] }

better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
signal-hook = "0.3.17"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
env_logger = "0.11.8"
libc = "0.2.161"
pretty_assertions = "1.4.1"
strip-ansi-escapes = "0.2.0"
color-eyre = "0.6.3"
derive_setters = "0.1.8"
thiserror = "2.0.16"
bincode = { version = "2.0.1", features = ["serde"] }
serde = "1.0.219"
whoami = "1.6.1"
blake2 = "0.10.6"
async-trait = "0.1.89"
ignore = "0.4.23"
regex = "1.11.2"

[dev-dependencies]
tempfile = "3.21.0"

[profile.release]
lto = false
strip = "debuginfo"
codegen-units = 1
